--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "",
   "dependencies": {
+    "dectalk": "1.3.1",
     "tmi.js": "^1.8.5",
     "bad-words": "^3.0.4",
     "fast-levenshtein": "^3.0.0",
