--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "",
   "license": "",
   "dependencies": {
-    "dectalk": "1.3.1",
-    "tmi.js": "^1.8.5",
     "bad-words": "^3.0.4",
+    "dectalk": "1.3.1",
+    "dotenv": "^10.0.0",
     "fast-levenshtein": "^3.0.0",
-    "dotenv": "^10.0.0"
+    "say": "^0.16.0",
+    "speaker": "^0.5.4",
+    "tmi.js": "^1.8.5"
   }
 }
